--- a/motioneye-on-raspios-install.yml
+++ b/motioneye-on-raspios-install.yml
@@ -64,6 +64,8 @@
         - ffmpeg
         - motion
         - v4l-utils
+        - libcamera-v4l2
+        - libcamera-tools
 
           #    - name: Clone MotionEye repository
           #      git:
